https://github.com/pi-engine/guide/issues/1633 fix media modal overflow

--- a/asset/css/media.css
+++ b/asset/css/media.css
@@ -263,3 +263,8 @@ tr[data-media-id] img{
 body:not(.pi-admin) .pi-module-content .media{
     display:flex;
 }
+
+.season-switch .btn {
+    padding: 1px 5px;
+    font-size: 14px;
+}
